--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -111,8 +111,7 @@
                 <form class="form">
                   <div class="form-group">
                     <div class="relative">
-                      <input class="form-control" id="name" type="date" pattern="[a-zA-Z\s]+" required="" autofocus=""
-                        title="Username should only contain letters. e.g. Piyush Gupta" autocomplete=""
+                      <input class="form-control"  type="date"  
                         placeholder="Type your name here...">
                       <i class="fa fa-calendar"></i>
                     </div>
