--- a/src/app/components/customerorders/customerorders.page.html
+++ b/src/app/components/customerorders/customerorders.page.html
@@ -4,9 +4,33 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<ion-header *ngIf="isMobile">
+  <ion-toolbar class="custom-toolbar">
+    <!-- Back Button -->
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+
+    <!-- Page Title -->
+    <ion-title class="custom-title">Orders</ion-title>
+
+    <!-- Cart Button with Badge -->
+  <ion-buttons slot="end">
+      <div class="header-social-links">
+        <div class="cart-icon" onclick="toggleCart()">
+          <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
+          <span class="cart-count">0</span>
+        </div>
+       
+      </div>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+
+
 <ion-content [fullscreen]="true">
 
-  <header id="header" class="header d-flex align-items-center sticky-top">
+  <header id="header" class="header d-flex align-items-center sticky-top"  *ngIf="!isMobile">
     <div
       class="header-container container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
@@ -28,7 +52,7 @@
       </nav>
 
       <div class="header-social-links">
-        <div class="cart-icon" (click)="toggleCart()">
+        <div class="cart-icon" >
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
           <span class="cart-count">0</span>
         </div>
@@ -71,7 +95,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-primary btn-xs" href="#">Processing</a>
+                        <a class="btn btn-primary btn-xs"  (click)="complete()">Complete</a>
                       </div>
                     </div>
                   </div>
@@ -94,7 +118,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-primary btn-xs" href="#">Processing</a>
+                        <a class="btn btn-primary btn-xs" >Start..</a>
                       </div>
                     </div>
                   </div>
@@ -117,7 +141,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-primary btn-xs" href="#">Processing</a>
+                        <a class="btn btn-primary btn-xs" >Processing</a>
                       </div>
                     </div>
                   </div>
@@ -151,7 +175,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -174,7 +198,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -196,7 +220,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -218,7 +242,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -240,7 +264,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -262,7 +286,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -284,7 +308,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-success btn-xs" href="#">Completed</a>
+                        <a class="btn btn-success btn-xs" >Completed</a>
                       </div>
                     </div>
                   </div>
@@ -320,7 +344,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-danger btn-xs" href="#">Cancelled</a>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
                       </div>
                     </div>
                   </div>
@@ -343,7 +367,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-danger btn-xs" href="#">Cancelled</a>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
                       </div>
                     </div>
                   </div>
@@ -365,7 +389,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-danger btn-xs" href="#">Cancelled</a>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
                       </div>
                     </div>
                   </div>
@@ -387,7 +411,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-danger btn-xs" href="#">Cancelled</a>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
                       </div>
                     </div>
                   </div>
@@ -410,7 +434,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-danger btn-xs" href="#">Cancelled</a>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
                       </div>
                     </div>
                   </div>
@@ -433,7 +457,7 @@
                         </div>
                       </div>
                       <div>
-                        <a class="btn btn-danger btn-xs" href="#">Cancelled</a>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
                       </div>
                     </div>
                   </div>
@@ -446,7 +470,7 @@
       </div>
     </div>
   </div>
-  <footer id="footer" class="footer light-background">
+  <footer id="footer" class="footer light-background" *ngIf="!isMobile">
 
     <div class="container footer-top">
       <div class="row gy-4">
@@ -467,23 +491,23 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a >Home</a></li>
+            <li><a >About us</a></li>
+            <li><a >Services</a></li>
+            <li><a >Terms of service</a></li>
+            <li><a >Privacy policy</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Marriage</a></li>
-            <li><a href="#">Baby Shower</a></li>
-            <li><a href="#">Engagement</a></li>
-            <li><a href="#">Birthday</a></li>
-            <li><a href="#">Puberty Ceremony</a></li>
-            <li><a href="#">Funeral</a></li>
+            <li><a >Marriage</a></li>
+            <li><a >Baby Shower</a></li>
+            <li><a >Engagement</a></li>
+            <li><a >Birthday</a></li>
+            <li><a >Puberty Ceremony</a></li>
+            <li><a >Funeral</a></li>
           </ul>
         </div>
 
