--- a/src/app/components/customerorders/customerorders.page.scss
+++ b/src/app/components/customerorders/customerorders.page.scss
@@ -26,7 +26,7 @@
     border-bottom: none !important;
 }
 .order-card-header{
-    background:#e4c815;
+    background:#7251A2;
     padding: 15px;
 }
 .order-card-header:first-child {
@@ -54,7 +54,7 @@
   line-height: 13px;
 }
 .prooduct-details-box .d-flex {
-  border: 1px solid #e4c815;
+  border: 1px solid #7251A2;
   border-radius: 10px;
   padding: 15px;
   align-items: center;
