--- a/src/app/components/event-details/event-details.page.scss
+++ b/src/app/components/event-details/event-details.page.scss
@@ -17,7 +17,7 @@
 }
 
 .accordion {
-	background-color: #e4c815;
+	background-color: #7251A2;
 	border-radius: 1rem;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -42,7 +42,7 @@
 
 .ac-trigger:hover,
 .ac-trigger:focus {
-	background-color: #e4c815;
+	background-color: #7251A2;
 }
 
 .ac-title ,.ac-icon{
@@ -72,7 +72,7 @@
 }
 
 .ac-state:checked ~ .ac-trigger {
-	background-color: #e4c815;
+	background-color: #7251A2;
 	box-shadow: 0 5px 5px -5px rgb(52 80 99);
 }
 
