--- a/src/app/components/profile/profile.page.scss
+++ b/src/app/components/profile/profile.page.scss
@@ -43,7 +43,7 @@
     inset-block-start: 0;
     width: 100%;
     height: 100%;
-    background-color: #e4c81542;
+    background-color: #7251A242;
     border-radius: 0.3rem;
 }
 
@@ -217,8 +217,8 @@
     /* Tab labels */
     .tabs {
       display: flex;
-      border-bottom: 2px solid #e4c815;
-      background: #e4c815;
+      border-bottom: 2px solid #7251A2;
+      background: #7251A2;
     }
 
     .tabs label {
@@ -232,14 +232,14 @@
     }
 
     .tabs label:hover {
-      background-image: linear-gradient(to right, #fb923c 0%, #ea580c 50%, #fb923c 100%);
+      background-image: linear-gradient(to right, #fb923c 0%, #7251A2 50%, #fb923c 100%);
     }
 
     /* Active tab */
     input#tab1:checked ~ .tabs label[for="tab1"],
     input#tab2:checked ~ .tabs label[for="tab2"],
     input#tab3:checked ~ .tabs label[for="tab3"] {
-      background-image: linear-gradient(to right, #fb923c 0%, #ea580c 50%, #fb923c 100%);
+      background-image: linear-gradient(to right, #fb923c 0%, #7251A2 50%, #fb923c 100%);
     }
 
     /* Content sections */
@@ -282,7 +282,7 @@
     }
 
     thead {
-      background-color: #e4c815;
+      background-color: #7251A2;
       color: white;
     }
 
