--- a/src/app/components/customerorders/customerorders.page.scss
+++ b/src/app/components/customerorders/customerorders.page.scss
@@ -101,3 +101,6 @@
 /**=====================
       3.31 Order-history CSS End
   ==========================**/
+  .sc-ion-buttons-ios-h,.toolbar-container{
+  padding: 20px !important;
+}
