--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -13,7 +13,9 @@
     <ion-title class="custom-title">Menu</ion-title>
 
     <!-- Cart Button with Badge -->
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" style="    padding-right: 17px !important;
+    padding-top: 8px;
+">
       <div class="header-social-links">
         <div class="cart-icon" onclick="toggleCart()">
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
@@ -163,6 +165,7 @@
                 </div>
               </label>
             </div>
+
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
               <label class="option_item">
                 <input type="checkbox" class="checkbox">
@@ -273,7 +276,7 @@
                 </div>
               </label>
             </div>
-           
+            
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
               <label class="option_item">
                 <input type="checkbox" class="checkbox">
@@ -329,7 +332,8 @@
                 </div>
               </label>
             </div>
-            <div class="next-btn md:px-5 py-3">
+            
+            <div class="next-btn md:px-5 py-3" style="padding-bottom: 5rem !important;">
               <a class="Bhagona-Btn float-start" (click)="gotocheff()">Cart <i class="fa fa-cart-plus"
                   aria-hidden="true"></i></a>
               <a class="Bhagona-Btn float-end" (click)="gotocheff()">Continue <i class="fa fa-long-arrow-right"
@@ -552,7 +556,8 @@
               </label>
 
             </div>
-             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+           
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
               <label class="option_item">
                 <input type="checkbox" class="checkbox">
                 <div class="option_inner facebook">
@@ -605,7 +610,7 @@
 
             </div>
             
-            <div class="next-btn md:px-5 py-3">
+            <div class="next-btn md:px-5 py-3" style="padding-bottom: 5rem !important;">
               <a class="Bhagona-Btn float-start" (click)="gotocheff()">Cart <i class="fa fa-cart-plus"
                   aria-hidden="true"></i></a>
               <a class="Bhagona-Btn float-end" (click)="gotocheff()">Continue <i class="fa fa-long-arrow-right"
@@ -622,7 +627,7 @@
   
 
 
-
+<!-- 
   <div class="container ">
     <div class="row">
       <div class="col-md-12">
@@ -632,7 +637,7 @@
         
       </div>
     </div>
-  </div>
+  </div> -->
   </div>
 
 
