--- a/src/app/components/webcheckout/webcheckout.page.html
+++ b/src/app/components/webcheckout/webcheckout.page.html
@@ -13,14 +13,13 @@
         <img src="../../../assets/home-logo.png" style="width: 145px;">
       </a>
 
-      <nav id="navmenu" class="navmenu">
+       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a (click)="gotoOrders()">Orders</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">About</a></li>          
+          <li><a href="#Events">Events</a></li>
           <li><a href="#services">Services</a></li>
-
+          <li><a (click)="gotoOrders()">Orders</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-x"></i>
@@ -118,7 +117,7 @@
               <hr class="heading_space">
               <div class="accordion-group">
                 <div class="accordion">
-                  <input type="radio" class="ac-state" id="ac-1" name="ac-group-1">
+                  <input type="radio" checked class="ac-state" id="ac-1" name="ac-group-1">
                   <label for="ac-1" class="ac-trigger" tabindex="0">
                     <div class="ac-title">Poultry & Mutton (wholesaler)</div>
                     <div class="ac-icon">
