--- a/src/app/components/checkout/checkout.page.html
+++ b/src/app/components/checkout/checkout.page.html
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <ion-header>
   <ion-toolbar class="custom-toolbar">
     <!-- Back Button -->
@@ -9,7 +14,9 @@
     <ion-title class="custom-title">Check Out</ion-title>
 
     <!-- Cart Button with Badge -->
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" style="    padding-right: 17px !important;
+    padding-top: 8px;
+">
       <div class="header-social-links">
         <div class="cart-icon" onclick="toggleCart()">
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
@@ -30,61 +37,7 @@
 
     <!-- Select Event Menu Start -->
 
-<section class="about" style="display: none;">
-                <div class="container">
-                    <div class="about-top">
-                        <h2 class="h2 section-title">What we do</h2>
 
-                        <p class="section-text">Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the development of the asset through its charitable foundation</p>
-
-                        <ul class="about-list">
-                            <li>
-                                <div class="about-card">
-                                    <div class="card-icon"><ion-icon name="briefcase-outline" role="img" class="md hydrated"></ion-icon></div>
-
-                                    <h3 class="h3 card-title">Paid Search and Social Management</h3>
-
-                                    <p class="card-text">Help your business increase their visibility and reach targeted audiences effectively</p>
-                                </div>
-                            </li>
-
-                            <li>
-                                <div class="about-card">
-                                    <div class="card-icon"><ion-icon name="chatbubbles-outline" role="img" class="md hydrated"></ion-icon></div>
-
-                                    <h3 class="h3 card-title">Direct Response Content</h3>
-
-                                    <p class="card-text">Drive immediate engagement and conversions, prompting your audience to act right away</p>
-                                </div>
-                            </li>
-
-                            <li>
-                                <div class="about-card">
-                                    <div class="card-icon"><ion-icon name="rocket-outline" role="img" class="md hydrated"></ion-icon></div>
-
-                                    <h3 class="h3 card-title"><abbr title="Conversion Rate Optimization">CRO</abbr> and Retention Optimizations</h3>
-
-                                    <p class="card-text">By optimizing both conversion rates and customer retention, your business will significantly boost their overall revenue</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="about-bottom">
-                        <figure class="about-bottom-banner">
-                            <img src="https://i.postimg.cc/nzjhFvtq/about-banner.png" alt="about banner" class="about-banner">
-                        </figure>
-
-                        <div class="about-bottom-content">
-                            <h2 class="h2 section-title">We're obsessed with growth</h2>
-
-                            <p class="section-text">Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back</p>
-
-                            <button class="btn btn-secondary">Sign up for Free</button>
-                        </div>
-                    </div>
-                </div>
-            </section>
 <div >
 			<div class="bg_color-dark-1 check-out">
 				<div class="row">
@@ -98,8 +51,23 @@
 
 
               </div>
+               <div class="products bg_color-dark-1">
+      <div class="container menu-data">
+        <div class="row">
+          <div class="">
+            <!-- Nav tabs -->
+            <div class="">
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#mobile-events" aria-controls="mobile-events" role="tab"
+                    data-toggle="tab"><i class="fa-solid fa-helmet-safety pr-2"></i> Events </a></li>
+                <li role="presentation"><a href="#mobile-services" aria-controls="mobile-services" role="tab" data-toggle="tab"><i
+                      class="fa-solid fa-utensils pr-2"></i> Services </a></li>
 
-              <div class="popular-inner-box">
+              </ul>
+              <!-- Tab panes -->
+              <div class="tab-content p-0">
+                <div role="tabpanel" class="tab-pane active" id="mobile-events">
+                 <div class="popular-inner-box p-0">
                 
       	<form class="form">
 	  <div class="form-group">
@@ -133,15 +101,213 @@
     </div>
 
 
-     <div class="tright ">
-	  	<a><button class="movebtn movebtnre" type="Reset"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back </button></a>
-	  	<a><button class="movebtn movebtnsu" type="Submit" (click)="gotoOrdder()">Proceed <i class="fa fa-fw fa-paper-plane"></i></button></a>
-	  </div>
+     
 	 
 	</form>
 
 	
               </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="mobile-services">
+                 <div class="page-wrapper">
+             
+              <div class="accordion-group">
+                <div class="accordion">
+                  <input type="radio" class="ac-state" id="ac-1" name="ac-group-1">
+                  <label for="ac-1" class="ac-trigger" tabindex="0">
+                    <div class="ac-title">Poultry & Mutton (wholesaler)</div>
+                    <div class="ac-icon">
+                      <i class="ac-icon-close fa fa-plus"></i>
+                      <i class="ac-icon-open fa fa-minus"></i>
+                    </div>
+                  </label>
+                  <div class="ac-content">
+                    <div class="ac-content-inner">
+                      <div class="py-3 px-0">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/256/4050/4050257.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Mutton</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                            
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn3.iconfinder.com/data/icons/marine-life/100/04-512.png"
+                                  class="align-middle" style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">prawns</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/512/2002/2002611.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Chicken</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion">
+                  <input type="radio" class="ac-state" id="ac-2" name="ac-group-1">
+                  <label for="ac-2" class="ac-trigger" tabindex="0">
+                    <div class="ac-title">Kirana/grocery (wholesaler)</div>
+                    <div class="ac-icon">
+                      <i class="ac-icon-close fa fa-plus"></i>
+                      <i class="ac-icon-open fa fa-minus"></i>
+                    </div>
+                  </label>
+                  <div class="ac-content">
+                    <div class="ac-content-inner">
+                      <div class="py-3 px-0">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/512/541/541705.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Rice</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img
+                                  src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
+                                  class="align-middle" style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">vegtables </h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion">
+                  <input type="radio" class="ac-state" id="ac-3" name="ac-group-1">
+                  <label for="ac-3" class="ac-trigger" tabindex="0">
+                    <div class="ac-title">⁠Vegetables & leafs</div>
+                    <div class="ac-icon">
+                      <i class="ac-icon-close fa fa-plus"></i>
+                      <i class="ac-icon-open fa fa-minus"></i>
+                    </div>
+                  </label>
+                  <div class="ac-content">
+                    <div class="ac-content-inner">
+                     <div class="py-3 px-0">
+                        <div class="row">
+                          <div class="col-md-6">
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img src="https://cdn-icons-png.flaticon.com/512/541/541705.png" class="align-middle"
+                                  style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">Rice</h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6">
+                            
+                            <div class="d-flex key-feature mb-2">
+                              <div class="icon text-center rounded-pill me-3">
+                                <img
+                                  src="https://icons.veryicon.com/png/o/commerce-shopping/taofen-bar-category-icon-library/fresh-vegetables.png"
+                                  class="align-middle" style="height: 32px; width: 32px;" alt="">
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">vegtables </h6>
+                              </div>
+                              <div class="flex-1">
+                                <h6 class="mb-0">50kg</h6>
+                              </div>
+                              <div>
+                                <h6 class="mb-0 price">$55.00</h6>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group ">
+                              <button class="custom-btn btn-7"><span>Order Value : $25,000/-</span></button>
+                            </div>
+            </div>
+
+
+                </div>
+                <div class="tright ">
+	  	<a><button class="movebtn movebtnre" type="Reset"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back </button></a>
+	  	<a><button class="movebtn movebtnsu" type="Submit" (click)="gotoOrdder()">Proceed <i class="fa fa-fw fa-paper-plane"></i></button></a>
+	  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+              
 
 
             </div>
