--- a/src/app/components/customerorders/customerorders.page.html
+++ b/src/app/components/customerorders/customerorders.page.html
@@ -16,7 +16,7 @@
 
     <!-- Cart Button with Badge -->
   <ion-buttons slot="end">
-      <div class="header-social-links">
+      <div class="header-social-links p-4">
         <div class="cart-icon" onclick="toggleCart()">
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
           <span class="cart-count">0</span>
@@ -67,7 +67,7 @@
 
   
 
-  <div class="website-body" style="padding: 100px 0;">
+  <div class="website-body">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -77,7 +77,7 @@
             </div>
             <div class="order-card-body">
               <div class="row g-sm-4 g-3">
-                <div class="col-xxl-4 col-md-4 col-sm-4">
+                <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -100,7 +100,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-4 col-md-4 col-sm-4">
+                <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -123,7 +123,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-4 col-md-4 col-sm-4">
+                <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -157,7 +157,7 @@
             </div>
             <div class="order-card-body">
               <div class="row g-sm-4 g-3">
-                                <div class="col-xxl-4 col-md-4 col-sm-4">
+                                <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -180,7 +180,7 @@
                     </div>
                   </div>
                 </div>
-                 <div class="col-xxl-4 col-md-4 col-sm-4">
+                 <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -202,7 +202,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -224,7 +224,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -246,7 +246,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -268,7 +268,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -290,7 +290,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -326,7 +326,7 @@
               <div class="row g-sm-4 g-3">
                 
                 
-                 <div class="col-xxl-4 col-md-4 col-sm-4">
+                 <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -349,7 +349,7 @@
                     </div>
                   </div>
                 </div>
-                 <div class="col-xxl-4 col-md-4 col-sm-4">
+                 <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -371,7 +371,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -393,30 +393,7 @@
                       </div>
                     </div>
                   </div>
-                </div> <div class="col-xxl-4 col-md-4 col-sm-4">
-                  <div class="prooduct-details-box">
-                    <div class="d-flex">
-                      <div class="event-img">
-                        <img class="align-self-center img-fluid img-60"
-                          src="https://cdn-icons-png.flaticon.com/512/703/703213.png" alt="#">
-                      </div>
-                      <div class="flex-grow-1">
-                        <div class="product-name">
-                          <h6>Weeding</h6>
-                        </div>
-
-
-                        <div class="avaiabilty mt-2">
-                          <div class="text-success">100 Members</div>
-                        </div>
-                      </div>
-                      <div>
-                        <a class="btn btn-danger btn-xs" >Cancelled</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                 <div class="col-xxl-4 col-md-4 col-sm-4">
+                </div> <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
@@ -439,7 +416,30 @@
                     </div>
                   </div>
                 </div>
-                 <div class="col-xxl-4 col-md-4 col-sm-4">
+                 <div class="col-xxl-4 col-md-4 col-sm-12">
+                  <div class="prooduct-details-box">
+                    <div class="d-flex">
+                      <div class="event-img">
+                        <img class="align-self-center img-fluid img-60"
+                          src="https://cdn-icons-png.flaticon.com/512/703/703213.png" alt="#">
+                      </div>
+                      <div class="flex-grow-1">
+                        <div class="product-name">
+                          <h6>Weeding</h6>
+                        </div>
+
+
+                        <div class="avaiabilty mt-2">
+                          <div class="text-success">100 Members</div>
+                        </div>
+                      </div>
+                      <div>
+                        <a class="btn btn-danger btn-xs" >Cancelled</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                 <div class="col-xxl-4 col-md-4 col-sm-12">
                   <div class="prooduct-details-box">
                     <div class="d-flex">
                       <div class="event-img">
