--- a/src/app/components/event-details/event-details.page.html
+++ b/src/app/components/event-details/event-details.page.html
@@ -9,7 +9,9 @@
     <ion-title class="custom-title">Event Details</ion-title>
 
     <!-- Cart Button with Badge -->
-    <ion-buttons slot="end" *ngIf="from != 'websitehome'">
+    <ion-buttons slot="end" *ngIf="from != 'websitehome'" style="    padding-right: 17px !important;
+    padding-top: 8px;
+">
       <div class="header-social-links">
         <div class="cart-icon" onclick="toggleCart()">
           <img src="https://cdn-icons-png.flaticon.com/512/777/777205.png" style="width: 30px;">
@@ -120,31 +122,31 @@
 
                   <div class="form-group">
                     <div class="relative">
-                      <input class="form-control" type="text" required="" placeholder="How Many Members">
+                      <input class="form-control" type="text"  placeholder="How Many Members">
                       <i class="fa fa-user"></i>
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="relative">
-                      <input class="form-control" type="text" required="" placeholder="How Many Veg Members">
+                      <input class="form-control" type="text"  placeholder="How Many Veg Members">
                       <i class="fa fa-user"></i>
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="relative">
-                      <input class="form-control" type="text" required="" placeholder="How Many Non-Veg Members">
+                      <input class="form-control" type="text"  placeholder="How Many Non-Veg Members">
                       <i class="fa fa-user"></i>
                     </div>
                   </div>
                   <!-- <div class="form-group">
 	  	<div class="relative">
-	  	<input class="form-control" type="text" id="menu" required="" placeholder="Edit Your Menu">
+	  	<input class="form-control" type="text" id="menu"  placeholder="Edit Your Menu">
 	  	<i class="fa fa-suitcase"></i>
 	  </div>	
 	  </div>
 		<div class="form-group">
 	  	<div class="relative">
-	  		<input class="form-control" type="text" id="chef" required="" placeholder="Edit Your Cheff">
+	  		<input class="form-control" type="text" id="chef"  placeholder="Edit Your Cheff">
 	  		<i class="fa fa-user"></i>
 	  	</div>
 	  </div> -->
@@ -153,15 +155,15 @@
                   </div>
 
                   <div class="form-group">
-                    <button class="custom-btn btn-7" (click)="gotomenu()"><span>Select Your Menu</span></button>
+                    <button type="button" class="custom-btn btn-7" (click)="gotomenu()"><span>Select Your Menu</span></button>
                   </div>
 
-                  <div class="tright hidden">
+                  <!-- <div class="tright hidden">
                     <a href=""><button class="movebtn movebtnre" type="Reset"><i class="fa fa-long-arrow-left"
                           aria-hidden="true"></i> Back </button></a>
                     <a href=""><button class="movebtn movebtnsu" type="Submit" (click)="gotomenu()">Proceed <i
                           class="fa fa-fw fa-paper-plane"></i></button></a>
-                  </div>
+                  </div> -->
 
                 </form>
 
