--- a/src/app/components/event-details/event-details.page.scss
+++ b/src/app/components/event-details/event-details.page.scss
@@ -102,3 +102,12 @@ hr {
     margin: -1px 0 0;
 }
 /** Checkout page end **/
+
+@media (min-width: 300px) and (max-width: 776px) {
+.bg_color-dark-1 {
+    background: #031119;
+    position: relative;
+    z-index: 1;
+    height: 100%;
+}
+}
