--- a/src/app/components/review/review.page.html
+++ b/src/app/components/review/review.page.html
@@ -62,7 +62,7 @@
 
     </div>
   </header>
-  <div class="website-body" style="padding: 150px 0;">
+  <div class="website-body">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
@@ -81,15 +81,18 @@
               <h2>hygienic</h2>
             </div>
             <div class="actions">
-              <div class="rating">
-                <!-- Star icons for rating -->
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <span class="reviews">279</span>
-              </div>
+              <div class="rate">
+            <input type="radio" id="star5" name="rate" value="5" />
+            <label for="star5" title="text">5 stars</label>
+            <input type="radio" id="star4" name="rate" value="4" />
+            <label for="star4" title="text">4 stars</label>
+            <input type="radio" id="star3" name="rate" value="3" />
+            <label for="star3" title="text">3 stars</label>
+            <input type="radio" id="star2" name="rate" value="2" />
+            <label for="star2" title="text">2 stars</label>
+            <input type="radio" id="star1" name="rate" value="1" />
+            <label for="star1" title="text">1 star</label>
+          </div>
             </div>
           </div>
           <div class="Review-Card m-b15">
@@ -101,15 +104,18 @@
               <h2>Food Taste</h2>
             </div>
             <div class="actions">
-              <div class="rating">
-                <!-- Star icons for rating -->
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <span class="reviews">279</span>
-              </div>
+             <div class="rate">
+            <input type="radio" id="star5" name="rate" value="5" />
+            <label for="star5" title="text">5 stars</label>
+            <input type="radio" id="star4" name="rate" value="4" />
+            <label for="star4" title="text">4 stars</label>
+            <input type="radio" id="star3" name="rate" value="3" />
+            <label for="star3" title="text">3 stars</label>
+            <input type="radio" id="star2" name="rate" value="2" />
+            <label for="star2" title="text">2 stars</label>
+            <input type="radio" id="star1" name="rate" value="1" />
+            <label for="star1" title="text">1 star</label>
+          </div>
             </div>
           </div>
           <div class="Review-Card m-b15">
@@ -121,18 +127,25 @@
               <h2>Chef Behavior</h2>
             </div>
             <div class="actions">
-              <div class="rating">
-                <!-- Star icons for rating -->
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <span class="reviews">279</span>
-              </div>
+              <div class="rate">
+            <input type="radio" id="star5" name="rate" value="5" />
+            <label for="star5" title="text">5 stars</label>
+            <input type="radio" id="star4" name="rate" value="4" />
+            <label for="star4" title="text">4 stars</label>
+            <input type="radio" id="star3" name="rate" value="3" />
+            <label for="star3" title="text">3 stars</label>
+            <input type="radio" id="star2" name="rate" value="2" />
+            <label for="star2" title="text">2 stars</label>
+            <input type="radio" id="star1" name="rate" value="1" />
+            <label for="star1" title="text">1 star</label>
+          </div>
             </div>
           </div>
+          <div class="form-group">
+          <button type="button" class="custom-btn btn-7" (click)="submit()"><span>Submit</span></button>
         </div>
+        </div>
+        
       </div>
     </div>
   </div>
