--- a/src/app/components/websitehome/websitehome.page.html
+++ b/src/app/components/websitehome/websitehome.page.html
@@ -16,11 +16,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a (click)="gotoOrders()">Orders</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">About</a></li>          
+          <li><a href="#Events">Events</a></li>
           <li><a href="#services">Services</a></li>
-
+          <li><a (click)="gotoOrders()">Orders</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-x"></i>
@@ -206,7 +205,7 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Marriage</h3>
                   </a>
                   <p>Two hearts become one, a journey just begun. Wishing love, laughter, and a happily ever after.
@@ -223,7 +222,7 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Baby Shower</h3>
                   </a>
                   <p>Little hands and tiny feet, a bundle of joy we can’t wait to meet.
@@ -240,7 +239,7 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Engagement</h3>
                   </a>
                   <p>They found each other, and love found its way.
@@ -257,14 +256,14 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Birthday</h3>
                   </a>
                   <p>Celebrate the gift of life and the joy it brings.
                     Another year older, brighter, and bold with wings.
 
                   </p>
-                  <a href="#" class="stretched-link"></a>
+                  <a class="stretched-link"></a>
                 </div>
                 <a class="thm-btn product-card_btn" (click)="openEventDetailsModal()">Book Event<span></span></a>
               </div>
@@ -277,12 +276,12 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Puberty Ceremony</h3>
                   </a>
                   <p>A step into tradition, growth, and grace,
                     Welcoming a new role with pride in place.</p>
-                  <a href="#" class="stretched-link"></a>
+                  <a class="stretched-link"></a>
                 </div>
                 <a class="thm-btn product-card_btn" (click)="openEventDetailsModal()">Book Event<span></span></a>
               </div>
@@ -295,12 +294,12 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Funeral</h3>
                   </a>
                   <p>A life well lived, a soul set free,
                     Gone from sight, but in our hearts eternally.</p>
-                  <a href="#" class="stretched-link"></a>
+                  <a class="stretched-link"></a>
                 </div>
                 <a class="thm-btn product-card_btn" (click)="openEventDetailsModal()">Book Event<span></span></a>
               </div>
@@ -1009,7 +1008,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1032,7 +1031,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1055,7 +1054,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1078,7 +1077,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1102,7 +1101,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1125,7 +1124,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1148,7 +1147,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1171,7 +1170,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1198,7 +1197,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1221,7 +1220,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1244,7 +1243,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1267,7 +1266,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
+                      <a class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1294,7 +1293,7 @@
 
     <!-- Our Service Section Start -->
 
-    <section id="Events" class="Events section ">
+    <section id="services" class="Events section ">
 
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
@@ -1311,16 +1310,16 @@
               </div>
               <div class="details position-relative">
 
-                <a href="#" class="stretched-link">
+                <a class="stretched-link">
                   <h3>⁠Function halls</h3>
                 </a>
                 <p>Celebrate the gift of life and the joy it brings.
                   Another year older, brighter, and bold with wings.
 
                 </p>
-                <a href="#" class="stretched-link"></a>
+                <a class="stretched-link"></a>
               </div>
-              <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+              <a class="thm-btn product-card_btn" (click)="openServiceDetailsModal()">Book Service<span></span></a>
             </div>
           </div>
           <div class="col-xl-4 col-md-4">
@@ -1330,13 +1329,13 @@
               </div>
               <div class="details position-relative">
 
-                <a href="#" class="stretched-link">
+                <a class="stretched-link">
                   <h3>Kirana/grocery </h3>
                 </a>
                 <p>Two hearts become one, a journey just begun. Wishing love, laughter, and a happily ever after.
                 </p>
               </div>
-              <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+              <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -1347,13 +1346,13 @@
               </div>
               <div class="details position-relative">
 
-                <a href="#" class="stretched-link">
+                <a class="stretched-link">
                   <h3>Poultry & Mutton</h3>
                 </a>
                 <p>Little hands and tiny feet, a bundle of joy we can’t wait to meet.
                 </p>
               </div>
-              <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+              <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
             </div>
           </div><!-- End Service Item -->
           <div class="col-xl-4 col-md-4">
@@ -1363,14 +1362,14 @@
               </div>
               <div class="details position-relative">
 
-                <a href="#" class="stretched-link">
+                <a class="stretched-link">
                   <h3>Vegetables & leafs</h3>
                 </a>
                 <p>A step into tradition, growth, and grace,
                   Welcoming a new role with pride in place.</p>
-                <a href="#" class="stretched-link"></a>
+                <a class="stretched-link"></a>
               </div>
-              <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+              <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
             </div>
           </div><!-- End Service Item -->
           <div class="col-xl-4 col-md-4">
@@ -1380,13 +1379,13 @@
               </div>
               <div class="details position-relative">
 
-                <a href="#" class="stretched-link">
+                <a class="stretched-link">
                   <h3>⁠Tenthouse/ Cooking Vessels</h3>
                 </a>
                 <p>They found each other, and love found its way.
                   A promise made for a beautiful forever.</p>
               </div>
-              <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+              <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -1398,16 +1397,16 @@
               </div>
               <div class="details position-relative">
 
-                <a href="#" class="stretched-link">
+                <a class="stretched-link">
                   <h3>Dairy products</h3>
                 </a>
                 <p>Celebrate the gift of life and the joy it brings.
                   Another year older, brighter, and bold with wings.
 
                 </p>
-                <a href="#" class="stretched-link"></a>
+                <a class="stretched-link"></a>
               </div>
-              <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+              <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -1426,13 +1425,13 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>Photography / pre wedding Shoots</h3>
                   </a>
                   <p>Two hearts become one, a journey just begun. Wishing love, laughter, and a happily ever after.
                   </p>
                 </div>
-                <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+                <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
               </div>
             </div><!-- End Service Item -->
 
@@ -1443,13 +1442,13 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>⁠Catering Service</h3>
                   </a>
                   <p>Little hands and tiny feet, a bundle of joy we can’t wait to meet.
                   </p>
                 </div>
-                <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+                <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
               </div>
             </div><!-- End Service Item -->
 
@@ -1460,13 +1459,13 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>⁠Decorators/ Decoration </h3>
                   </a>
                   <p>They found each other, and love found its way.
                     A promise made for a beautiful forever.</p>
                 </div>
-                <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+                <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
               </div>
             </div><!-- End Service Item -->
             <div class="col-xl-4 col-md-4">
@@ -1476,23 +1475,23 @@
                 </div>
                 <div class="details position-relative">
 
-                  <a href="#" class="stretched-link">
+                  <a class="stretched-link">
                     <h3>⁠Water Supply</h3>
                   </a>
                   <p>A life well lived, a soul set free,
                     Gone from sight, but in our hearts eternally.</p>
-                  <a href="#" class="stretched-link"></a>
+                  <a class="stretched-link"></a>
                 </div>
-                <a href="#" class="thm-btn product-card_btn">Book Service<span></span></a>
+                <a class="thm-btn product-card_btn"(click)="openServiceDetailsModal()">Book Service<span></span></a>
               </div>
             </div><!-- End Service Item -->
 
 
           </div>
         </div>
-        <div class="col-md-12 show-more-btn mx-auto text-center mt-5">
+        <!-- <div class="col-md-12 show-more-btn mx-auto text-center mt-5">
           <a class="bhagona-btn-2" data-toggle="collapse" data-target="#services">Show More</a>
-        </div>
+        </div> -->
       </div>
 
     </section>
@@ -1757,23 +1756,23 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a>Home</a></li>
+            <li><a>About us</a></li>
+            <li><a>Services</a></li>
+            <li><a>Terms of service</a></li>
+            <li><a>Privacy policy</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#">Marriage</a></li>
-            <li><a href="#">Baby Shower</a></li>
-            <li><a href="#">Engagement</a></li>
-            <li><a href="#">Birthday</a></li>
-            <li><a href="#">Puberty Ceremony</a></li>
-            <li><a href="#">Funeral</a></li>
+            <li><a>Marriage</a></li>
+            <li><a>Baby Shower</a></li>
+            <li><a>Engagement</a></li>
+            <li><a>Birthday</a></li>
+            <li><a>Puberty Ceremony</a></li>
+            <li><a>Funeral</a></li>
           </ul>
         </div>
 
