--- a/src/app/components/webcheckout/webcheckout.page.html
+++ b/src/app/components/webcheckout/webcheckout.page.html
@@ -13,10 +13,10 @@
         <img src="../../../assets/home-logo.png" style="width: 145px;">
       </a>
 
-       <nav id="navmenu" class="navmenu">
+      <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>          
+          <li><a href="#about">About</a></li>
           <li><a href="#Events">Events</a></li>
           <li><a href="#services">Services</a></li>
           <li><a (click)="gotoOrders()">Orders</a></li>
@@ -39,8 +39,7 @@
     </div>
   </header>
   <div class="website-body">
-    <section class="bg-silver-light pdt-105 pdb-80"
-      style="background-image: url(https://thetork.com/demos/html/uevent/assets/images/team/bg.png);background-repeat: no-repeat;
+    <section class="bg-silver-light pdt-105 pdb-80" style="background-image: url(https://thetork.com/demos/html/uevent/assets/images/team/bg.png);background-repeat: no-repeat;
     background-size: cover;
     background-position: center;">
       <div class="container">
@@ -92,11 +91,109 @@
                               </div>
                             </div>
                             <div class="form-group ">
+                              <label class="option_item">
+                                <!-- <input type="checkbox" class="checkbox"> -->
+                                <div class="option_inner facebook">
+                                  <div class="tickmark">
+                                    <img
+                                      src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
+                                  </div>
+                                  <div class="Menu-List">
+                                    <div class="Menu-List-img">
+                                      <img
+                                        src="https://static.vecteezy.com/system/resources/thumbnails/026/488/038/small_2x/handsome-male-master-chef-smiling-generate-ai-photo.jpg"
+                                        alt="thumb">
+
+                                      <div class="Menu-List-img-overlay">
+                                        <div class="icon">
+                                          <span>
+                                            <svg width="18" height="18" viewBox="0 0 20 20" fill="none"
+                                              xmlns="http://www.w3.org/2000/svg">
+                                              <path
+                                                d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                                                fill="#FFB23E"></path>
+                                            </svg>
+                                          </span>
+                                        </div>
+                                      </div>
+
+                                    </div>
+
+                                    <div class="popular-inner-box">
+                                      <div class="Menu-List-text">
+                                        <h3>K. Subba Rao</h3>
+                                      </div>
+
+                                      <div class="popular-inner-item">
+                                        <div class="text">
+                                          <h5>"Proficient in crafting classic and modern cuisine, with a knack for
+                                            developing unique flavor profiles." </h5>
+                                        </div>
+                                      </div>
+                                    </div>
+
+
+                                  </div>
+                                </div>
+                              </label>
+
+                            </div>
+                             <div class="form-group ">
+                              <label class="option_item">
+                                <!-- <input type="checkbox" class="checkbox"> -->
+                                <div class="option_inner facebook">
+                                  <div class="tickmark">
+                                    <img
+                                      src="https://www.pngplay.com/wp-content/uploads/12/Check-Mark-Tick-Transparent-File.png">
+                                  </div>
+                                  <div class="Menu-List">
+                                    <div class="Menu-List-img">
+                                      <img
+                                        src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg"
+                                        alt="thumb">
+
+                                      <div class="Menu-List-img-overlay">
+                                        <div class="icon">
+                                          <span>
+                                            <svg width="18" height="18" viewBox="0 0 20 20" fill="none"
+                                              xmlns="http://www.w3.org/2000/svg">
+                                              <path
+                                                d="M8.361 2.72748C9.03157 1.3148 10.9691 1.3148 11.6396 2.72748L12.7986 5.16895C13.0649 5.72993 13.5796 6.11875 14.175 6.20871L16.7664 6.60021C18.2659 6.82675 18.8646 8.74259 17.7796 9.84221L15.9044 11.7426C15.4736 12.1793 15.277 12.8084 15.3787 13.425L15.8213 16.1084C16.0775 17.6611 14.51 18.8452 13.1689 18.1121L10.851 16.8451C10.3184 16.554 9.68221 16.554 9.14964 16.8451L6.8318 18.1121C5.49065 18.8452 3.92318 17.6611 4.17931 16.1084L4.62198 13.425C4.72369 12.8084 4.52709 12.1793 4.09623 11.7426L2.22105 9.84221C1.13605 8.74259 1.73477 6.82675 3.23421 6.60021L5.82564 6.20871C6.42107 6.11875 6.9358 5.72993 7.20208 5.16895L8.361 2.72748Z"
+                                                fill="#FFB23E"></path>
+                                            </svg>
+                                          </span>
+                                        </div>
+                                      </div>
+
+                                    </div>
+
+                                    <div class="popular-inner-box">
+                                      <div class="Menu-List-text">
+                                        <h5 style="font-size: 19px; font-weight: 600; color: #000;">South Indian Delight</h5>
+                                      </div>
+
+                                      <div class="popular-inner-item">
+                                        <div class="text">
+                                          <h5>Authentic combo – idli, dosa, sambar, chutneys, and dessert. </h5>
+                                          <a class="Bhagona-Btn mt-2">₹200 per plate</a>
+                                        </div>
+                                      </div>
+                                    </div>
+
+
+                                  </div>
+                                </div>
+                              </label>
+
+                            </div>
+
+
+                            <div class="form-group ">
                               <button class="custom-btn btn-7"><span>Order Value : $25,000/-</span></button>
                             </div>
 
 
-                            
+
 
                           </form>
 
@@ -145,7 +242,7 @@
                                 <h6 class="mb-0 price">$55.00</h6>
                               </div>
                             </div>
-                            
+
                             <div class="d-flex key-feature mb-2">
                               <div class="icon text-center rounded-pill me-3">
                                 <img src="https://cdn3.iconfinder.com/data/icons/marine-life/100/04-512.png"
@@ -215,7 +312,7 @@
                             </div>
                           </div>
                           <div class="col-md-6">
-                            
+
                             <div class="d-flex key-feature mb-2">
                               <div class="icon text-center rounded-pill me-3">
                                 <img
@@ -249,7 +346,7 @@
                   </label>
                   <div class="ac-content">
                     <div class="ac-content-inner">
-                     <div class="py-3 px-0">
+                      <div class="py-3 px-0">
                         <div class="row">
                           <div class="col-md-6">
                             <div class="d-flex key-feature mb-2">
@@ -269,7 +366,7 @@
                             </div>
                           </div>
                           <div class="col-md-6">
-                            
+
                             <div class="d-flex key-feature mb-2">
                               <div class="icon text-center rounded-pill me-3">
                                 <img
@@ -294,17 +391,17 @@
                 </div>
               </div>
               <div class="form-group ">
-                              <button class="custom-btn btn-7"><span>Order Value : $25,000/-</span></button>
-                            </div>
+                <button class="custom-btn btn-7"><span>Order Value : $25,000/-</span></button>
+              </div>
             </div>
           </div>
         </div>
         <div class="tright mt-5">
-                              <a><button class="movebtn movebtnre" type="Reset"><i class="fa fa-long-arrow-left"
-                                    aria-hidden="true"></i> Back </button></a> 
-                              <a><button class="movebtn movebtnsu" type="Submit" (click)="gotoOrdder()">Proceed <i
-                                    class="fa fa-fw fa-paper-plane"></i></button></a>
-                            </div>
+          <a><button class="movebtn movebtnre" type="Reset"><i class="fa fa-long-arrow-left" aria-hidden="true"></i>
+              Back </button></a>
+          <a><button class="movebtn movebtnsu" type="Submit" (click)="gotoOrdder()">Proceed <i
+                class="fa fa-fw fa-paper-plane"></i></button></a>
+        </div>
       </div>
     </section>
   </div>
